--- a/src/assets/css/global/fonts.css
+++ b/src/assets/css/global/fonts.css
@@ -1,4 +1,20 @@
 @font-face {
+  font-family: Nouvelle;
+  font-style: normal;
+  font-display: swap;
+  font-weight: 400;
+  src: local(''), url(/assets/fonts/NNNouvelle/NNNouvelleGrotesk-Normal.woff2) format('woff2'),
+}
+
+@font-face {
+  font-family: Nouvelle;
+  font-style: normal;
+  font-display: swap;
+  font-weight: 700;
+  src: local(''), url(/assets/fonts/NNNouvelle/NNNouvelleGrotesk-Bold.woff2) format('woff2'),
+}
+
+@font-face {
   font-family: Inter;
   font-style: normal;
   font-display: swap;
