--- a/src/assets/css/global/fonts.css
+++ b/src/assets/css/global/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Nouvelle';
+  font-family: 'NNNouvelle';
   font-style: normal;
   font-display: swap;
   font-weight: 400;
@@ -7,7 +7,7 @@
 }
 
 @font-face {
-  font-family: 'Nouvelle';
+  font-family: 'NNNouvelle';
   font-style: normal;
   font-display: swap;
   font-weight: 700;
