--- a/src/assets/css/global/global-styles.css
+++ b/src/assets/css/global/global-styles.css
@@ -96,7 +96,7 @@ main:focus {
   outline: none;
 }
 
-article [href^='http']:not([href*='eleventy-excellent.netlify.app'])::after {
+article [href^='http']:not([href*='https://scintillating-maamoul-8e8385.netlify.app/'])::after {
   display: inline-block;
   width: 1em;
   height: 1em;
