--- a/src/assets/css/blocks/section.css
+++ b/src/assets/css/blocks/section.css
@@ -16,4 +16,9 @@
 
 .section :is(h1, h2, h3, blockquote) {
   opacity: 95%;
+  text-transform: uppercase;
+    font-weight: 800;
+    -webkit-text-stroke-color: var(--color-light);
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-width: 1px;
 }
