--- a/src/assets/css/blocks/menu.css
+++ b/src/assets/css/blocks/menu.css
@@ -1,11 +1,8 @@
 .logo {
-  font-weight: bold;
-  text-transform: uppercase;
-
   display: flex;
   align-items: center;
   gap: var(--space-xs);
-  letter-spacing: -0.08rem;
+  letter-spacing: var(--tracking-s);
   padding: var(--space-xs) 0;
 }
 
