--- a/src/assets/css/blocks/section.css
+++ b/src/assets/css/blocks/section.css
@@ -3,7 +3,7 @@
 }
 
 .section__inner {
-  background: var(--spot-color, var(--color-dark));
+  background: var(--color-dark, var(--color-dark));
   color: var(--color-light);
 }
 
