--- a/src/assets/css/global/fonts.css
+++ b/src/assets/css/global/fonts.css
@@ -106,7 +106,7 @@
   font-family: 'Gt-America';
   font-style: normal;
   font-display: swap;
-  font-weight: 500;
+  font-weight: bold;
   src: local(''), url(/assets/fonts/Untitled/GT-America-Standard-Medium.woff) format('woff');
 }
 
